arreglando estilos de header y main con bootstrap

--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
         </div>
     </header>
     <main class="container pt-3">
-        <section class="row">
-            <article class="col-md-4 text-center card">
+        <section class="row gap-4 justify-content-center">
+            <article class="col-md-4 text-center card w-auto border-2 border-info">
                 <img src="https://res.cloudinary.com/dmddi5ncx/image/upload/v1710868808/practicas/site_montain/mountain_Blue_jw0ynv.png" alt="mountain" class="img-fluid">
                 <h3>Climbing</h3>
                 <p>Get your climbing gear for the season.</p>
             </article>
-            <article class="col-md-4">
+            <article class="col-md-4 text-center card w-auto border-2 border-info">
                 <img src="https://res.cloudinary.com/dmddi5ncx/image/upload/v1710868809/practicas/site_montain/shoe_Blue_i30lmj.png" alt="mountain" class="img-fluid">
                 <h3>Running</h3>
                 <p>Run from your troubles with these shoes.</p>
             </article>
-            <article class="col-md-4">
+            <article class="col-md-4 text-center card w-auto border-2 border-info">
                 <img src="https://res.cloudinary.com/dmddi5ncx/image/upload/v1710868806/practicas/site_montain/bicycle_Blue_vtsexv.png" alt="mountain" class="img-fluid">
                 <h3>Bicyle</h3>
                 <p>Can't get away fast enough? Try a bike.</p>
             </article>
         </section>
 
-        <section class="row">
+        <section class="row pt-5">
             <article class="col-md-6">
                 <img src="https://res.cloudinary.com/dmddi5ncx/image/upload/v1710868813/practicas/site_montain/shutterstock_422560537_qhgwzr.jpg" alt="" class="img-fluid">
             </article>
-            <article class="col-md-6">
+            <article class="col-md-6 d-flex flex-column justify-content-center">
                 <h3>Title</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque qui animi magni deserunt, dignissimos obcaecati culpa delectus quae. Natus ullam omnis nemo labore corrupti et praesentium unde ratione optio a?</p>
-                <button>Lear More</button>
+                <button class="btn rounded-2 w-25 text-light bg-black">Lear More</button>
             </article>
         </section>
     </main>
